--- a/cv/ref.bib
+++ b/cv/ref.bib
@@ -1,4 +1,3 @@
-
 @Inbook{Dedeoglu:2020,
 author="Dedeoglu, V. and Jurdak, R. and Dorri, A. and Lunardi, R. C. and Michelin, R. A. and Zorzo, A. F. and Kanhere, S. S.",
 title="{Blockchain Technologies for IoT}",
@@ -118,7 +117,7 @@ month={April}}
 @INPROCEEDINGS{Arruda:2020,
   author={E. H. P. {de Arruda} and R. C. {Lunardi} and H. C. {Nunes} and A. F. {Zorzo} and R. A. {Michelin}},
   booktitle={IEEE International Black Sea Conference on Communications and Networking}, 
-  title={{Appendable-block Blockchain Evaluation over Geographically-Distributed IoT Networks}}, 
+  title={{Appendable-block Blockchain Evaluation over Geographically-Distributed IoT Networks}},
   year={2020},
   volume={},
   number={},
@@ -241,12 +240,12 @@ keywords = {Blockchain, Consensus algorithms, Distributed ledgers, Internet of T
 
 
 @INCOLLECTION{Michelin:2021,
-  title     = "{Appendable-Block} Blockchains",
-  booktitle = "Advances in Information Security, Privacy, and Ethics",
-  author    = "Michelin, Regio A and Castagna Lunardi, Roben and Nunes, Henry
+  title     = {{Appendable-Block} Blockchains},
+  booktitle = {Advances in Information Security, Privacy, and Ethics},
+  author    = {Michelin, Regio A and Castagna Lunardi, Roben and Nunes, Henry
                Cabral and Dedeoglu, Volkan and Neu, Charles V and Zorzo,
-               Avelino Francisco and Kanhere, Salil S",
-  abstract  = "Blockchain has emerged as a technology that can change the way
+               Avelino Francisco and Kanhere, Salil S},
+  abstract  = {Blockchain has emerged as a technology that can change the way
                people and systems interact, providing mechanisms that ensure
                integrity and ownership of the data produced without reliance on
                a trusted third-party. Appendable-block blockchain is a novel
@@ -260,10 +259,10 @@ keywords = {Blockchain, Consensus algorithms, Distributed ledgers, Internet of T
                Additionally, the authors provide a discussion on the security
                aspects of this new blockchain. Finally, the chapter presents
                current issues and possible future directions for
-               appendable-block blockchains.",
-  publisher = "IGI Global",
-  pages     = "66--88",
-  year      =  2021
+               appendable-block blockchains.},
+  publisher = {IGI Global},
+  pages     = {66--88},
+  year      =  {2021}
 }
 
 @misc{INPI:2018,
@@ -274,10 +273,10 @@ year={2018}
 }
 
 @INCOLLECTION{Lunardi:2022b,
-  title     = "{When Blockchain meets Smart Cities: Opportunities, Security and Future Research}",
-  booktitle = "Blockchains - A Handbook on Fundamentals, Platforms and Applications",
-  author    = "Lunardi, R. C. and Michelin, R. A. and Alharby, M. and Dedeoglu, V. and Nunes, H. C. and de Arruda, E. and  and Zorzo, A. F. and Moorsel, A.",
-  publisher = "Springer. To be published soon.",
-  pages     = "43 p.",
-  year      =  2022
+  title     = {When Blockchain meets Smart Cities: Opportunities, Security and Future Research},
+  booktitle = {Blockchains - A Handbook on Fundamentals, Platforms and Applications},
+  author    = {Lunardi, R. C. and Michelin, R. A. and Alharby, M. and Dedeoglu, V. and Nunes, H. C. and de Arruda, E. and  and Zorzo, A. F. and Moorsel, A.},
+  publisher = {Springer. To be published soon.},
+  pages     = {43 p.},
+  year      =  {2022}
 }
