--- a/cv/preamble.tex
+++ b/cv/preamble.tex
@@ -68,7 +68,7 @@
     {\addcomma\space}{}
   }
 }
-\makeauthorsbold{Bryngelson}
+\makeauthorsbold{Lunardi}
 
 % get reverse numbering
 \makeatletter
@@ -119,5 +119,4 @@
 \lhead{}\chead{}\rhead{}
 \cfoot{}
 \rfoot{\color{myBrown}Page \thepage\xspace of \pageref{LastPage}}
-\cfoot{\color{myBrown}Latest at \href{https://bryngelson-research.com/cv/cv.pdf}{\tt bryngelson-research.com/cv/cv.pdf}}
-\lfoot{\color{myBrown}Spencer H. Bryngelson}
+\lfoot{\color{myBrown}Roben C. Lunardi}
