--- a/publications/test.bib
+++ b/publications/test.bib
@@ -1,9 +1,12 @@
 @article{Lunardi:2019, 
   author = {Lunardi, Roben C. and Michelin, Regio A. and Neu, Charles V. and Nunes, Henry C. and Zorzo, Avelino F. and Kanhere, Salil S.}, 
   title = {Impact of Consensus on Appendable-Block Blockchain for IoT}, 
-  year = {2019}, isbn = {9781450372831}, 
-  publisher = {Association for Computing Machinery},  booktitle = {2EAI International Conference on Mobile and Ubiquitous Systems: Computing, Networking and Services}, 
-  pages = {228–237}, numpages = {10}, 
+  year = {2019}, 
+  isbn = {9781450372831}, 
+  publisher = {Association for Computing Machinery},  
+  booktitle = {2EAI International Conference on Mobile and Ubiquitous Systems: Computing, Networking and Services}, 
+  pages = {228–237}, 
+  numpages = {10}, 
   keywords = {IoT, security, distributed ledgers, blockchain, consensus},
   doi = {10.1145/3360774.3360798}}
 @INPROCEEDINGS{Zorzo:2018,
